# dnd-character-creator

./: .coverage  .gitignore  .gitmodules  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Dockerfile  Dockerfile.local  Makefile  README.md  devcontainer.json  fight_commands.txt  index.md  main.py  pyproject.toml  requirements.txt  settings.json  settings.local.json  whitelist_vulture.py
.claude/: keybindings.json  settings.json  settings.local.json
.claude/hooks/: _pytest_guard.py  leaky_mapping_guard.py  local_import_guard.py  notify.py  notify.sh  pyi_guard.py  pytest_guard_pre.py
.claude/rules/: index.md
.claude/scripts/: manage_precommit_deps.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh
.github/workflows/: cleanup-dev.yml  deploy-dev.yml  deploy.yml  generate-blocks.yml  pre-commit.yml  rebuild_index.yml  tests.yml
DND_character_creator/: LatexString.py  __init__.py  config.py  skill_proficiency.py
DND_character_creator/character/: builder.py  character.py  spells.py
DND_character_creator/pdf_creator/: create_pdf.py  update_prototype.py
DND_character_creator/wiki_scraper/: AbilityTemplate.py  BackgroundTemplate.py  FeatTemplate.py  MainClassTemplate.py  MainRaceTemplate.py  scrape_background.py  scrape_feat.py  scrape_main_class.py  scrape_main_class_abilities.py  scrape_sub_class.py  scrape_wiki_race.py  scrape_wiki_race_ability.py  scrape_wiki_spell.py
agents/: dependify-class-generator.md  pydantic-cli-builder.md
dnd/: __init__.py  _combat_event.py  _position.py  character_wrapper.pyi  config.py  other_profficiencies.py  skill_proficiency.py
dnd/character/: __init__.py  _ability_name.py  _creature_base.py  _fight_resource.py  _spell_modifier_context.py  ability.py  builder.py  character.py  class_levels.py  ordered_presentable_character_serializer.py  presentable_character.py  stats.py
dnd/choices/: alignment.py  language.py  sex.py
dnd/fight/: __init__.py  __main__.py  _ability_name.py  _action_group.py  _attack.py  _attack_result.py  _combat_event.py  _combatant_slot.py  _condition.py  _creature.py  _damage_type.py  _fight_resource.py  _multi_attack.py  _non_attack.py  _saving_throw.py  _saving_throw_result.py  _spell_attack.py  _team_id.py  _terrain_type.py  battlemap.py  combat_action.py  fight_character.py  simulator.py  strategy.py
dnd/pdf_creator/: LatexString.py  create_pdf.py  prototype.tex  remove_blank_page.py  run_lunatex.py  signed_int.py  update_prototype.pyi
dnd/server/: __main__.py  _validate_pipeline.py  app.py  handler.py
dnd_character_creator/: config.py  feats.py  other_profficiencies.py  signed_int.py  skill_proficiency.py
dnd_character_creator/character/: ability.py  builder.py  character.py  presentable_character.py  spells.py  stats.py
dnd_character_creator/choices/: alignment.py  language.py  sex.py
dnd_character_creator/pdf_creator/: create_pdf.py  remove_blank_page.py  run_lunatex.py  update_prototype.py
dnd_character_creator/server/: __main__.py  app.py  handler.py
dnd_character_creator/wiki_scraper/: Ability.py  AbilityTemplate.py  BackgroundTemplate.py  Feat.py  FeatTemplate.py  MainClassTemplate.py  MainRaceTemplate.py  scrape_background.py  scrape_feat.py  scrape_main_class.py  scrape_main_class_abilities.py  scrape_sub_class.py  scrape_wiki_race.py  scrape_wiki_race_ability.py  scrape_wiki_spell.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/scripts/: generate_blocks.py  validate_filtering.py
frontend/src/: App.tsx  index.css  types.ts
hooks/: any_guard.py  arbitrary_types_guard.py  bare_wildcard_match_guard.py  cast_guard.py  forbidden_functions_guard.py  mypy_ignore_guard.py  pragma_no_cover_guard.py  pytest_guard_post.py
scraped_data/background/: Athlete.json  City Watch.json  Courtier.json  Faceless.json  Gladiator.json  (+9 more)
scripts/: deploy.sh  fight.py  generate_schema.py  optimize_sorcerer_weights.py  rebuild_index.py  scrape_wikidot.py  simulate.py  simulate_2v2_sorcerers.py
subclass_getter/: __init__.py
terraform/: api_gateway.tf  bootstrap-dev-policy.json  bootstrap-policy.json  ci.tf  ecr.tf  frontend.tf  iam.tf  lambda.tf  locals.tf  main.tf  outputs.tf  ssm.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
tests/: conftest.py  test_druid.py  test_fighter.py
topics/: workflow.md
(+2356 files in other folders)
