[project]
name = "dnd_character_creator"
version = "0.1.0"
description = ""
authors = [{name = "Tesla2000", email = "fratajczak124@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.8.2",
    "pydantic-settings>=2.12.0",
    "frozendict>=2.4.7",
    "langchain-openai>=1.1.3",
    "langchain>=1.1.3",
    "fastapi>=0.126.0",
    "mangum>=0.19.0",
    "tiktoken==0.8.0",
]

[project.optional-dependencies]
tests = [
    "pytest>=9.0.1",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "requires_api_key: marks tests that require API keys (deselect with '-m \"not requires_api_key\"')",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
linting = [
    "pre-commit>=4.5.1",
]
local-deployment = [
    "uvicorn>=0.40.0",
]
scraping = [
    "beautifulsoup4>=4.14.3",
]
