[project]
name = "dnd"
version = "0.1.0"
description = ""
authors = [{name = "Tesla2000", email = "fratajczak124@gmail.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.8.2",
    "pydantic-settings>=2.12.0",
    "frozendict>=2.4.7",
    "langchain-openai>=1.1.3",
    "langchain>=1.1.3",
    "fastapi>=0.126.0",
    "mangum>=0.19.0",
    "tiktoken==0.8.0",
    "subclass-getter>=0.1.3",
    "uvicorn>=0.40.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "requires_api_key: marks tests that require API keys (deselect with '-m \"not requires_api_key\"')",  # pragma: allowlist secret
]

[tool.mypy]
plugins = ["pydantic.mypy", "typing_protocol_intersection.mypy_plugin"]
exclude = ["tests/", "scripts/"]

[[tool.mypy.overrides]]
module = ["scripts.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "dnd.character.blueprint.building_blocks",
    "dnd.character.blueprint.building_blocks.*",
    "dnd.character.blueprint.simplified_blocks.*",
    "dnd.character.builder",
    "dnd.server.app",
    "dnd.server.example_generators.*",
]
disallow_any_generics = false

[[tool.mypy.overrides]]
module = ["dnd.character.blueprint.simplified_blocks.simplified_blocks"]
disable_error_code = ["call-overload"]

[tool.bandit]
skips = ["B311"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
tests = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]
dev = [
    {include-group = "tests"},
    "pre-commit>=4.5.1",
    "typing-protocol-intersection>=0.6.4",
]
linting = [
    "pre-commit>=4.5.1",
]
local-deployment = [
    "uvicorn>=0.40.0",
]
scraping = [
    "beautifulsoup4>=4.14.3",
]
