[project]
name = "dnd"
version = "0.1.0"
description = ""
authors = [{name = "Tesla2000", email = "fratajczak124@gmail.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.8.2",
    "pydantic-settings>=2.12.0",
    "frozendict>=2.4.7",
    "langchain-openai>=1.1.3",
    "langchain>=1.1.3",
    "fastapi>=0.126.0",
    "mangum>=0.19.0",
    "tiktoken==0.8.0",
    "uvicorn>=0.40.0",
    "pydantic-frozendict>=0.1.3",
    "structured-output-creator>=0.1.1",
    "typing-protocol-intersection>=0.6.4",
    "uuid-string>=0.1.13",
]

[tool.pytest.ini_options]
markers = [
    "unit: pure logic, no I/O",
    "integration: multi-component, no server, no AI",
    "smoke: quick sanity tests requiring an API key",
    "e2e: full AI-powered flows requiring an API key",
]
addopts = "--cov=dnd --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
branch = true
source = ["dnd"]


[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = true
exclude_lines = [
    "if TYPE_CHECKING:",
    "assert_never",
    "case _ as never:",
    "...",
    "pass",
]

[tool.mypy]
plugins = ["pydantic.mypy", "typing_protocol_intersection.mypy_plugin"]
exclude = ["tests/", "scripts/"]
disable_error_code = ["overload-overlap"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
tests = [
    "httpx2>=2.7.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]
dev = [
    {include-group = "tests"},
    "pre-commit>=4.5.1",
]
